--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "mycookingapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crypto": "^1.0.1",
     "express": "^4.18.3",
-    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1"
   }
